packages/yew-attrs-macro/tests/attrs_macro/special-key-fail.stderr
error: special prop "key" is not allowed as attribute
 --> tests/attrs_macro/special-key-fail.rs:4:5
  |
4 |     attrs! { key="a" };
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `attrs` (in Nightly builds, run with -Z macro-backtrace for more info)
