packages/yew-attrs-macro/tests/attrs_macro/special-key-fail.rs
use yew_attrs::attrs;

fn compile_fail() {
    attrs! { key="a" };
}

fn main() {}
